--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="start">Open the terminal to play</p>
     <script src="script.js"></script>
 </body>
 </html>
